@@ -2,6 +2,7 @@
 [Alexandr Topilski]
 - [RocksDB] Update sources to version 5.16.0
 - [LevelDB] Update sources to version 1.20
+- [Memcached] Fix load database content
 
 1.19.1 / September 19, 2018
 [Alexandr Topilski]
